# serializer version: 1
# name: TestAnonymous.test_get_and_create
  dict({
    'authentication': None,
    'created_at': datetime,
    'id': str,
    'ip': '1.1.1.1',
    'reset': None,
  })
# ---
# name: TestAuthenticated.test_get_and_create[snapshot]
  dict({
    'authentication': dict({
      'user_id': 1,
    }),
    'created_at': datetime,
    'id': str,
    'ip': '1.1.1.1',
    'reset': None,
  })
# ---
# name: TestReset.test_create_and_get
  dict({
    'authentication': None,
    'created_at': datetime,
    'id': str,
    'ip': '1.1.1.1',
    'reset': dict({
      'remember': True,
      'user_id': 1,
    }),
  })
# ---
